--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<a class="item" href="about.html">About</a>
 				<a class="item ctn-modal" href="#">Contact</a>
 			<!-- social media -->
-				<a class="fitted item" href="https://www.facebook.com/redebron"><i class="large facebook f icon"></i></a>
+				<a class="fitted item" href="https://www.facebook.com/redEbron"><i class="large facebook f icon"></i></a>
 				<a class="fitted item" href="https://twitter.com/redebron"><i class="large twitter icon"></i></a>
 				<a class="fitted item" href="https://www.instagram.com/yourladyred/"><i class="large instagram icon"></i></a>
 				<!-- <a class="fitted item" href="https://www.linkedin.com/in/redebron/"><i class="large linkedin icon"></i></a> -->	
@@ -40,11 +40,6 @@
 	<section id="carousel-wrap">
 		<div class="slide-container">
 			<div class="slider-box js-slideshow">
-
-				<div class="slide-img-box">
-					<img class="ui rounded popup-img" src="assets/event7.jpg">
-					<a class="img-text" href="events.html">Events</a>		
-				</div>
 
 				<div class="slide-img-box">
 					<img class="ui rounded popup-img" src="assets/photo20.jpg">
@@ -60,14 +55,30 @@
 					<img class="ui rounded popup-img" src="assets/macro1.jpg">
 					<a class="img-text" href="macro.html">Macro</a>
 				</div>
+
+				<div class="slide-img-box">
+					<img class="ui rounded popup-img" src="assets/portrait5.jpg">
+					<a class="img-text" href="portraits.html">Portraits</a>
+				</div>
+
+				<div class="slide-img-box">
+					<img class="ui rounded popup-img" src="assets/event7.jpg">
+					<a class="img-text" href="events.html">Events</a>
+				</div>
+
+
+				<div class="slide-img-box">
+					<img class="ui rounded popup-img" src="assets/land8.jpg">
+					<a class="img-text" href="landscape.html">Landscapes</a>
+				</div>
 			</div>
 		</div>
 <!-- image modal -->
 		<div class="ui modal fullscreen full-img">
 			<i class="close icon"></i>
 			<div class="content image">
-				<div class="ui massive image">
-					<img class="ui massive image" src="">
+				<div class="ui image">
+					<img class="ui image" src=""/>
 				</div>
 			</div>
 		</div>
